fix bug on ios safari

--- a/defaultTemplate/static/css/essay.css
+++ b/defaultTemplate/static/css/essay.css
@@ -12,8 +12,8 @@ html,body{
 
 .my-navbar{
     position: fixed;
-    width: 100%;
-    top:0px;
+    top: 0px;
+    width:100%;
     height: 52px;
     flex: none;
     display: flex;
@@ -42,19 +42,8 @@ html,body{
 .content{
     width: 100%;
     flex: 1;
+    margin-top: 60px;
 }
-
-.content.container .row{
-    height: 100%;
-}
-
-.content.content .row>div{
-    height: 100%;
-    overflow-y: scroll;
-}
-
-
-.content.content .row>div::-webkit-scrollbar {display:none}
 
 .content .side-bar .index-item.active a{
     color: #fff;
@@ -74,7 +63,7 @@ html,body{
 
 @media (max-width: 575.98px) {
     .content .side-bar{
-        position: absolute;
+        position: fixed;
         left: 0;
         top: 0;
         padding: 0;
